@@ -85,6 +85,8 @@ typedef struct {
 } ControlChange;
 
 typedef struct {
+	char*    name;              ///< Client name
+	int      name_exact;        ///< Exit if name is taken
 	char*    uuid;              ///< Session UUID
 	char*    load;              ///< Path for state to load
 	char*    preset;            ///< URI of preset to load
