@@ -3,6 +3,7 @@ jalv (1.4.7) unstable;
   * Improve preset support
   * Add generic Qt control UI from Amadeus Folego
   * Set Jack port order metadata
+  * Allow Jack client name to be set from command line (thanks Adam Avramov)
   * Add command prompt to console version for changing controls
   * Exit on Jack shutdown (Patch from Robin Gareus)
   * Report Jack latency (Patch from Robin Gareus)
@@ -11,7 +12,7 @@ jalv (1.4.7) unstable;
   * Use moc-qt4 if present for systems with multiple Qt versions
   * Add Qt5 version
 
- -- David Robillard <d@drobilla.net>  Sat, 12 Sep 2015 12:02:48 -0400
+ -- David Robillard <d@drobilla.net>  Fri, 09 Oct 2015 18:00:22 -0400
 
 jalv (1.4.6) stable;
 
